Fix billboards overlapping category dropdowns

--- a/app/assets/stylesheets/controller/welcome.css.scss
+++ b/app/assets/stylesheets/controller/welcome.css.scss
@@ -624,7 +624,7 @@ ul.image_list {
       content: '\f111'; /*fontawesome char code inside the '' */
       font-family: FontAwesome;
       font-size: 2em;
-      margin: 0.1em 2.5% 0.5em 0;
+      margin: 0.2em 2.5% 0.5em 0;
       display: block;
       clear: left;
       float: left;
